vlib/v/checker/tests/map_init_wrong_expected_type.out
vlib/v/checker/tests/map_init_wrong_expected_type.vv:18:9: error: invalid map value: expected `int`, not `string`
   16 |     b := Bar{
   17 |         m: {
   18 |             'a': '5'
      |                  ~~~
   19 |             'b': '6'
   20 |         } // bad
vlib/v/checker/tests/map_init_wrong_expected_type.vv:19:9: error: invalid map value: expected `int`, not `string`
   17 |         m: {
   18 |             'a': '5'
   19 |             'b': '6'
      |                  ~~~
   20 |         } // bad
   21 |     }
vlib/v/checker/tests/map_init_wrong_expected_type.vv:36:9: error: invalid map value: expected `int`, not `string`
   34 |         m: {
   35 |             ...a.m
   36 |             'c': '7'
      |                  ~~~
   37 |         } // bad values
   38 |     }
vlib/v/checker/tests/map_init_wrong_expected_type.vv:43:9: error: invalid map update: expected `map[string]int`, not `map[string]string`
   41 |     f := Bar{
   42 |         m: {
   43 |             ...x.m
      |                  ^
   44 |         } // bad update
   45 |     }
vlib/v/checker/tests/map_init_wrong_expected_type.vv:48:9: error: invalid map update: expected `map[string]int`, not `map[string]string`
   46 |     g := Bar{
   47 |         m: {
   48 |             ...x.m
      |                  ^
   49 |             'c': 7
   50 |         } // bad update, ok values
vlib/v/checker/tests/map_init_wrong_expected_type.vv:54:9: error: invalid map update: expected `map[string]int`, not `map[string]string`
   52 |     h := Bar{
   53 |         m: {
   54 |             ...x.m
      |                  ^
   55 |             'c': '7'
   56 |         } // bad update, bad values
vlib/v/checker/tests/map_init_wrong_expected_type.vv:55:9: error: invalid map value: expected `int`, not `string`
   53 |         m: {
   54 |             ...x.m
   55 |             'c': '7'
      |                  ~~~
   56 |         } // bad update, bad values
   57 |     }
